<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:padding="24dp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/generatePlanButton"
        app:layout_constraintVertical_bias="0"
        android:layout_marginBottom="24dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yasam_kocum_str"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/sleepEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="@dimen/textView_15sp"
                android:hint="@string/uyku_duzeni_msg_str"
                android:layout_marginBottom="16dp"/>
            <EditText
                android:id="@+id/dietEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="@dimen/textView_15sp"
                android:hint="@string/beslenme_aliskanliklar_msg_str"
                android:layout_marginBottom="16dp"/>
            <EditText
                android:id="@+id/exerciseEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="@dimen/textView_15sp"
                android:hint="@string/spor_aktivite_msg_str"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hedefiniz_msg_str"
                android:textSize="@dimen/textView_15sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <RadioGroup
                android:id="@+id/goalsRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/weightLossRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilo_vermek_msg_str"
                    android:layout_marginEnd="8dp"/>

                <RadioButton
                    android:id="@+id/muscleGainRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kas_kazanmak_msg_str"
                    android:layout_marginEnd="8dp"/>

                <RadioButton
                    android:id="@+id/fitnessRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fitness_msg_str"/>
            </RadioGroup>

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/generatePlanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sağlık Planı Oluştur"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>